@@ -1,0 +1,10 @@
+<?php
+/** Ho (Latin script) (Ho)
+ *
+ * @file
+ * @ingroup Languages
+ *
+ * @author ToluAyo
+ */
+
+$linkTrail = "/^([a-záéíóúãẽĩõũâêîôûã́ẽ́ĩ́ṍṹàèìòùḱćt́ṕṭḍṛṅńÁÉÍÓÚÃẼĨÕŨÂÊÎÔÛÃ́Ẽ́Ĩ́ṌṸÀÈÌÒÙḰĆT́ṔṬḌṚṄŃ]+)(.*)$/sDu";
