@@ -210,6 +210,7 @@ because of Phabricator reports.
 * (T384234) Added language support for Wali (wlx).
 * (T384245) Added language support for Lampung Api (ljp).
 * (T389916) Added language support for Buginese (bug-bugi).
+* (T393086) Added language support for Ho (Latin script) (hoc-latn).
 
 * …
 
